# sunspot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  tasks.py  tox.ini
app/: main.py
app/components/: download_button.py  show_detail.py
app/libs/: agg.py  wolf.py
config/color/: merged.json
config/seiryo/butterfly_diagram/: fromtext.json  merged.json  monthly.json
config/seiryo/color/: merged.json
config/seiryo/observations/: monthly.json
config/seiryo/sunspot_number/: diff.json  hemispheric.json  ratio.json  ratio_diff_1.json  ratio_diff_2.json  scatter.json  whole_disk.json  with_flare.json  with_flare_hemispheric.json  with_silso.json
data/: SN_m_tot_V2.0.txt  b0p.csv
data/flare/: flare-index-north_2011.txt  flare-index-north_2012.txt  flare-index-north_2013.txt  flare-index-north_2014.txt  flare-index-north_2015.txt  flare-index-north_2016.txt  flare-index-north_2017.txt  flare-index-north_2018.txt  flare-index-north_2019.txt  flare-index-north_2020.txt  flare-index-north_2021.txt  flare-index-north_2022.txt  flare-index-south_2011.txt  flare-index-south_2012.txt  flare-index-south_2013.txt  flare-index-south_2014.txt  flare-index-south_2015.txt  flare-index-south_2016.txt  flare-index-south_2017.txt  flare-index-south_2018.txt  flare-index-south_2019.txt  flare-index-south_2020.txt  flare-index-south_2021.txt  flare-index-south_2022.txt  flare-index-total_2011.txt  flare-index-total_2012.txt  flare-index-total_2013.txt  flare-index-total_2014.txt  flare-index-total_2015.txt  flare-index-total_2016.txt  flare-index-total_2017.txt  flare-index-total_2018.txt  flare-index-total_2019.txt  flare-index-total_2020.txt  flare-index-total_2021.txt  flare-index-total_2022.txt
data/fujimori_ar/: 1953-10.csv  1953-11.csv  1953-3.csv  1953-4.csv  1953-7.csv  1953-8.csv  1953-9.csv  1954-10.csv  1954-11.csv  1954-12.csv  1954-2.csv  1954-3.csv  1954-4.csv  1954-7.csv  1954-8.csv  1954-9.csv  1955-1.csv  1955-10.csv  1955-11.csv  1955-12.csv  1955-2.csv  1955-3.csv  1955-4.csv  1955-5.csv  1955-6.csv  1955-7.csv  1955-8.csv  1955-9.csv  1956-1.csv  1956-10.csv  1956-11.csv  1956-12.csv  1956-2.csv  1956-3.csv  1956-4.csv  1956-5.csv  1956-6.csv  1956-7.csv  1956-8.csv  1956-9.csv  (+713 more)
data/fujimori_sn/: 1954-1.csv  1954-10.csv  1954-11.csv  1954-12.csv  1954-2.csv  1954-3.csv  1954-4.csv  1954-5.csv  1954-6.csv  1954-7.csv  1954-8.csv  1954-9.csv  1955-1.csv  1955-10.csv  1955-11.csv  1955-12.csv  1955-2.csv  1955-3.csv  1955-4.csv  1955-5.csv  1955-6.csv  1955-7.csv  1955-8.csv  1955-9.csv  1956-1.csv  1956-10.csv  1956-11.csv  1956-12.csv  1956-2.csv  1956-3.csv  1956-4.csv  1956-5.csv  1956-6.csv  1956-7.csv  1956-8.csv  1956-9.csv  1957-1.csv  1957-10.csv  1957-11.csv  1957-12.csv  (+753 more)
data/fujimori_sn_index/: 195x.csv  196x.csv  197x.csv  198x.csv  199x.csv  200x.csv  201x.csv  202x.csv
data/seiryo/: 1950-2023.txt  2015-0.csv  2015-1.csv  2015-2.csv  2015-3.csv  2015-4.csv  2015-5.csv  2015-6.csv  2015-7.csv  2016-0.csv  2016-1.csv  2016-2.csv  2016-3.csv  2016-4.csv  2016-5.csv  2016-6.csv  2016-7.csv  2017-0.csv  2017-1.csv  2017-2.csv  2017-3.csv  2017-4.csv  2017-5.csv  2017-6.csv  2017-7.csv  2018-0.csv  2018-1.csv  2018-2.csv  2018-3.csv  2018-4.csv  2018-6.csv  2018-7.csv  2019-0.csv  2019-1.csv  2019-2.csv  2019-3.csv  2019-4.csv  2019-5.csv  2019-6.csv  2019-7.csv  (+28 more)
src/: ar_common.py  ar_main.py  ar_merge.py  ar_new.py  ar_notebook.py  ar_old.py  ar_type.py  butter_figure_daily.py  butter_figure_monthly.py  butter_text.py  butterfly_agg_common.py  butterfly_agg_daily.py  butterfly_agg_fromtext.py  butterfly_agg_monthly.py  butterfly_common.py  butterfly_figure_daily.py  butterfly_figure_fromtext.py  butterfly_figure_monthly.py  butterfly_text.py  butterfly_type.py  check_ar_data.py  check_ar_raw.py  check_sn_data.py  check_sn_raw.py  convert_ar_to_butter.py  seiryo_agg.py  seiryo_butterfly.py  seiryo_butterfly_config.py  seiryo_butterfly_draw.py  seiryo_butterfly_fromtext.py  seiryo_butterfly_image.py  seiryo_butterfly_merge.py  seiryo_butterfly_plotly.py  seiryo_butterfly_trim.py  seiryo_check_data.py  seiryo_check_file.py  seiryo_config_common.py  seiryo_obs_calendar.py  seiryo_obs_days.py  seiryo_obs_days_config.py  (+23 more)
src/util/: b0p.py  download_flare_index.py  download_silso.py  finder.py  finder_seiryo.py  font_list.py  npz_to_csv.py  parquet_to_csv.py  rename.py  view_parquet.py
test/: test_ar_common.py  test_ar_merge.py  test_ar_new.py  test_ar_notebook.py  test_ar_old.py  test_ar_type.py  test_butter_common.py  test_butter_text.py  test_butterfly_agg_common.py  test_butterfly_common.py  test_butterfly_text.py  test_convert_ar_to_butter.py  test_seiryo_agg.py  test_seiryo_butterfly.py  test_seiryo_butterfly_draw.py  test_seiryo_butterfly_fromtext.py  test_seiryo_butterfly_image.py  test_seiryo_butterfly_merge.py  test_seiryo_butterfly_plotly.py  test_seiryo_butterfly_trim.py  test_seiryo_check_data.py  test_seiryo_check_file.py  test_seiryo_config.py  test_seiryo_obs_calendar.py  test_seiryo_obs_days.py  test_seiryo_obs_days_plotly.py  test_seiryo_sunspot_number.py  test_seiryo_sunspot_number_plotly.py  test_seiryo_sunspot_number_with_flare.py  test_seiryo_sunspot_number_with_flare_plotly.py  test_seiryo_sunspot_number_with_silso.py  test_seiryo_sunspot_number_with_silso_plotly.py  test_sn_common.py  test_sn_jst.py  test_sn_type.py  test_sn_ut.py  test_wolf_number.py
