[tool.poetry]
name = "sunspot"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.18"
python-dateutil = "^2.9.0.post0"
suntime = "^1.3.2"
numpy = "^1.26.4"
scipy = "^1.13.0"
scikit-learn = "^1.4.1.post1"
more-itertools = "^10.2.0"
matplotlib = "^3.8.4"
plotly = "^5.20.0"
kaleido = "0.2.1"
uncertainty = { git = "https://github.com/sophiano/uncertainty" }

[tool.poetry.group.dev.dependencies]
invoke = "*"
pre-commit = "*"
ruff = "*"
mypy = "*"
types-python-dateutil = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"

[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 79
output-format = "grouped"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
    "D",      # pydocstyle
    "T20",    # flake8-print
    "INP",    # flake8-no-pep420
    "PD",     # pandas-vet
]
unfixable = [
    "ERA", # eradicate
]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = [
    "S101",    # assert
    "FBT001",  # boolean-type-hint-positional-argument
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.mypy]
python_version = "3.10"
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
    "--doctest-continue-on-failure",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]
